metimos todo pq nos olvidamos

--- a/subgeneros/thrash.html
+++ b/subgeneros/thrash.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>you mah brrrr ra da mmba eeeeenba brrr rat da nnda enda boo..rata teek um blura brrrr ra..duck ba dingo ba bitty ah ta freeta beeta ooh ra subuh dee ma ooh..rrrr reema ya me maraha suh bit ra da eemah a hin ta boo ra da eee wazizza ooh..ra suh ma heen na neena renaha..ooh hoo ra..ya da bin boorrrrra! </title>
@@ -59,29 +60,30 @@
     </header>
     <main>
         <div id="container">
-            <div id="carouselExample" class="carrusel carousel slide">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="imagenes/metallicaofpuppets.png" class="carrusel_img d-block " alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="imagenes/megadethinpeace.png" class="carrusel_img d-block " alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="imagenes/slayinblood.png" class="carrusel_img d-block " alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
+            <h1 class="metal-mania-regular">Thrash Metal</h1>
+            <h5 class="lora descripcion">Thrash metal es un subgénero del heavy metal que surgió a principios de los años 80, principalmente en Estados Unidos. Se caracteriza por riffs de guitarra rápidos y agresivos, baterías veloces con uso frecuente del doble bombo, voces ásperas y letras que suelen abordar temas sociales, políticos y de rebelión.
+
+                Bandas pioneras como Metallica, Slayer, Megadeth y Anthrax —conocidas como el Big Four— popularizaron el estilo, combinando la potencia del heavy metal tradicional con la velocidad y la actitud del punk hardcore. El thrash metal tuvo gran influencia en otros subgéneros como el death metal y el groove metal.</h5>
         </div>
     </main>
+    <footer>
+        <p id="copyright">&copy; 2025 Melatonin</p>
+        <div id="logos">
+            <img class="icono" src="../imagenes/vecteezy_twitter-png-icon_16716486.png" alt="tuiter">
+            <img class="icono" src="../imagenes/vecteezy_instagram-logo-png-instagram-logo-transparent-png_23986502.png" alt="instagram">
+            <img class="icono" src="../imagenes/figma-logo-512.png" alt="figma">
+            <img class="icono" src="../imagenes/Steam_icon_logo.svg.png" alt="steam">
+            <img class="icono" src="../imagenes/OptiFine.png" alt="optifine">
+            <img class="icono" src="../imagenes/python_logo_icon_168886.png" alt="python">
+            <img class="icono" src="../imagenes/LOGO- AIRV.png" alt="airv">
+            <img class="icono" src="../imagenes/vecteezy_linkedin-logo-png-linkedin-icon-transparent-png_18930480.png" alt="linkedin">
+            <img class="icono" src="../imagenes/ChatGPT_logo.svg.png" alt="chatgpt">
+            <img class="icono" src="../imagenes/pngimg.com - lg_logo_PNG21.png" alt="LG">
+            <img class="icono" src="../imagenes/SDLG_logo.svg.png" alt="SDLG">
+            <img class="icono" src="../imagenes/Green_Ducks_Logo.png" alt="Green Ducks">
+        </div>
+    </footer>
+
 
 </body>
 </html>
