--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
                 </div>
                 <div class="carousel-item">
                 <img src="imagenes/maidenChile.png" class="carrusel_img d-block w-100" alt="...">
-                <div class="carrusel_texto carousel-caption">
+                <div id="carrusel_texto2" class="carrusel_texto carousel-caption">
                     <h2 class="metal-mania-regular titulo_carrusel">Second slide label</h2>
                     <p class="lora texto_carrusel">Some representative placeholder content for the second slide.</p>
                 </div>
                 </div>
                 <div class="carousel-item">
                 <img src="imagenes/sabbath1975.png" class="carrusel_img d-block w-100" alt="...">
-                <div class="carrusel_texto carousel-caption">
+                <div id="carrusel_texto3" class="carrusel_texto carousel-caption">
                     <h2 class="metal-mania-regular titulo_carrusel">Third slide label</h2>
                     <p class="lora texto_carrusel">Some representative placeholder content for the third slide.</p>
                 </div>
@@ -103,19 +103,19 @@
             <div class="card card_aux" style="width: 18rem;">
                 <img src="imagenes/blacalbun.jpg" class="card-img-top" alt="Metallica">
                 <div class="card-body">
-                    <p class="card-text">Enter Sandman</p>
+                    <p class="card-text lora">Enter Sandman</p>
                 </div>
             </div>
             <div class="card card_aux" style="width: 18rem;">
                 <img src="imagenes/masterofpapes.jpg" class="card-img-top" alt="Master of Puppets">
                 <div class="card-body">
-                    <p class="card-text">Master of Puppets</p>
+                    <p class="card-text lora">Master of Puppets</p>
                 </div>
             </div>
             <div class="card card_aux" style="width: 18rem;">
                 <img src="imagenes/anyustisforjason.jpg" class="card-img-top" alt="And Justice for All">
                 <div class="card-body">
-                    <p class="card-text">One</p>
+                    <p class="card-text lora">One</p>
                 </div>
             </div>
             <div class="col-1"></div>
@@ -129,21 +129,21 @@
         <div class="card_box w-100">
             <div class="col-1"></div>
             <div class="card card_aux" style="width: 18rem;">
-                <img src="imagenes/blacalbun.jpg" class="card-img-top" alt="Metallica">
+                <img src="imagenes/RunToTheHills.jpeg" class="card-img-top" alt="RunToTheHills">
                 <div class="card-body">
-                    <p class="card-text">Enter Sandman</p>
+                    <p class="card-text lora">Run To The Hills</p>
                 </div>
             </div>
             <div class="card card_aux" style="width: 18rem;">
-                <img src="imagenes/masterofpapes.jpg" class="card-img-top" alt="Master of Puppets">
+                <img src="imagenes/Fear_Of_The_Dark.jpg" class="card-img-top" alt="FearOfDark">
                 <div class="card-body">
-                    <p class="card-text">Master of Puppets</p>
+                    <p class="card-text lora">Fear Of The Dark</p>
                 </div>
             </div>
             <div class="card card_aux" style="width: 18rem;">
-                <img src="imagenes/anyustisforjason.jpg" class="card-img-top" alt="And Justice for All">
+                <img src="imagenes/TheTrooper.jpg" class="card-img-top" alt="The Trooper">
                 <div class="card-body">
-                    <p class="card-text">One</p>
+                    <p class="card-text lora">The Trooper</p>
                 </div>
             </div>
             <div class="col-1"></div>
@@ -154,31 +154,47 @@
         </div>
         
         <div class="card_box_title w-100"></div>
-        <div class="card_box w-100">
+        <div class="card_box w-100" style="margin-bottom: 30px;">
             <div class="col-1"></div>
             <div class="card card_aux" style="width: 18rem;">
-                <img src="imagenes/blacalbun.jpg" class="card-img-top" alt="Metallica">
+                <img src="imagenes/Paranoid.jpg" class="card-img-top" alt="Paranoid">
                 <div class="card-body">
-                    <p class="card-text">Enter Sandman</p>
+                    <p class="card-text lora">Paranoid</p>
                 </div>
             </div>
             <div class="card card_aux" style="width: 18rem;">
-                <img src="imagenes/masterofpapes.jpg" class="card-img-top" alt="Master of Puppets">
+                <img src="imagenes/NIB.jpg" class="card-img-top" alt="NIB">
                 <div class="card-body">
-                    <p class="card-text">Master of Puppets</p>
+                    <p class="card-text lora">N.I.B</p>
                 </div>
             </div>
             <div class="card card_aux" style="width: 18rem;">
-                <img src="imagenes/anyustisforjason.jpg" class="card-img-top" alt="And Justice for All">
+                <img src="imagenes/childrenOfTheGrave.jpg" class="card-img-top" alt="ChildrenOfTheGrave">
                 <div class="card-body">
-                    <p class="card-text">One</p>
+                    <p class="card-text lora">Children Of The Grave</p>
                 </div>
             </div>
             <div class="col-1"></div>
         </div>
 
     </main>
-    
+    <footer>
+        <p id="copyright">&copy; 2025 Melatonin</p>
+        <div id="logos">
+            <img class="icono" src="imagenes/vecteezy_twitter-png-icon_16716486.png" alt="tuiter">
+            <img class="icono" src="imagenes/vecteezy_instagram-logo-png-instagram-logo-transparent-png_23986502.png" alt="instagram">
+            <img class="icono" src="imagenes/figma-logo-512.png" alt="figma">
+            <img class="icono" src="imagenes/Steam_icon_logo.svg.png" alt="steam">
+            <img class="icono" src="imagenes/OptiFine.png" alt="optifine">
+            <img class="icono" src="imagenes/python_logo_icon_168886.png" alt="python">
+            <img class="icono" src="imagenes/LOGO- AIRV.png" alt="airv">
+            <img class="icono" src="imagenes/vecteezy_linkedin-logo-png-linkedin-icon-transparent-png_18930480.png" alt="linkedin">
+            <img class="icono" src="imagenes/ChatGPT_logo.svg.png" alt="chatgpt">
+            <img class="icono" src="imagenes/pngimg.com - lg_logo_PNG21.png" alt="LG">
+            <img class="icono" src="imagenes/SDLG_logo.svg.png" alt="SDLG">
+            <img class="icono" src="imagenes/Green_Ducks_Logo.png" alt="Green Ducks">
+        </div>
+    </footer>
 
 
 </body>
