--- a/index.html
+++ b/index.html
@@ -91,31 +91,71 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        
+
         <div class="container_linea_piola">
             <h1 class="titulo metal-mania-regular">Metallica</h1>
             <div class="linea_piola"></div>
+            <div class="integrante">
+                <div class="integrante_img">
+                    <img class="integrante_foto" src="imagenes/james-hetfield-mid-1986-v0-8euratsi2th81.jpg" alt="Güemes hetfield">
+                </div>
+                <div class="integrante_palabras">
+                    <h3 class="metal-mania-regular subrayado">James Hetfield</h3>
+                    <h5 class="lora">James Alan Hetfield (Downey, California, 3 de agosto de 1963) es un músico estadounidense, conocido por ser el vocalista, guitarrista rítmico, principal compositor y cofundador de la banda Metallica. Es considerado como uno de los mejores músicos de heavy metal de todos los tiempos.</h5>
+                </div>
+            </div>
+            <div class="linea_piola_corta"></div>
+            <div class="integrante">
+                <div class="integrante_img">
+                    <img class="integrante_foto" src="imagenes/kirkhammett1986.jpeg" alt="Güemes hetfield">
+                </div>
+                <div class="integrante_palabras">
+                    <h3 class="metal-mania-regular subrayado">Kirk Hammett</h3>
+                    <h5 class="lora">Kirk Lee Hammett (San Francisco, 18 de noviembre de 1962) es un músico estadounidense, conocido principalmente por ser el guitarrista lider de la banda de thrash metal Metallica.</h5>
+                </div>
+            </div>
+            <div class="linea_piola_corta"></div>
+            <div class="integrante">
+                <div class="integrante_img">
+                    <img class="integrante_foto" src="imagenes/cliffburton1986.jpeg" alt="Güemes hetfield">
+                </div>
+                <div class="integrante_palabras">
+                    <h3 class="metal-mania-regular subrayado">Cliff Burton</h3>
+                    <h5 class="lora">Clifford Lee Burton (Castro Valley, 10 de febrero de 1962—Dörarp, 27 de septiembre de 1986) fue un músico estadounidense, conocido por haber sido el virtuoso bajista de la banda de heavy metal, Metallica, en sus primeros tres álbumes de estudio, hasta su fallecimiento a la edad de veinticuatro años.</h5>
+                </div>
+            </div>
+            <div class="linea_piola_corta"></div>
+            <div class="integrante">
+                <div class="integrante_img">
+                    <img class="integrante_foto" src="imagenes/larsulrich1986.jpeg" alt="Güemes hetfield">
+                </div>
+                <div class="integrante_palabras">
+                    <h3 class="metal-mania-regular subrayado">Lars Ulrich</h3>
+                    <h5 class="lora">Lars Ulrich (Gentofte, 26 de diciembre de 1963) es un músico danés, conocido principalmente por ser el baterista, compositor y cofundador de la banda estadounidense Metallica.</h5>
+                </div>
+            </div>
+            <h1 class="titulo_canciones metal-mania-regular">Canciones Populares</h1>
         </div>
-        
+
         <div class="card_box_title w-100"></div>
         <div class="card_box w-100">
             <div class="col-1"></div>
             <div class="card card_aux" style="width: 18rem;">
                 <img src="imagenes/blacalbun.jpg" class="card-img-top" alt="Metallica">
                 <div class="card-body">
-                    <p class="card-text lora">Enter Sandman</p>
+                    <p class="card-text lora_black">Enter Sandman</p>
                 </div>
             </div>
             <div class="card card_aux" style="width: 18rem;">
                 <img src="imagenes/masterofpapes.jpg" class="card-img-top" alt="Master of Puppets">
                 <div class="card-body">
-                    <p class="card-text lora">Master of Puppets</p>
+                    <p class="card-text lora_black">Master of Puppets</p>
                 </div>
             </div>
             <div class="card card_aux" style="width: 18rem;">
                 <img src="imagenes/anyustisforjason.jpg" class="card-img-top" alt="And Justice for All">
                 <div class="card-body">
-                    <p class="card-text lora">One</p>
+                    <p class="card-text lora_black">One</p>
                 </div>
             </div>
             <div class="col-1"></div>
@@ -131,19 +171,19 @@
             <div class="card card_aux" style="width: 18rem;">
                 <img src="imagenes/RunToTheHills.jpeg" class="card-img-top" alt="RunToTheHills">
                 <div class="card-body">
-                    <p class="card-text lora">Run To The Hills</p>
+                    <p class="card-text lora_black">Run To The Hills</p>
                 </div>
             </div>
             <div class="card card_aux" style="width: 18rem;">
                 <img src="imagenes/Fear_Of_The_Dark.jpg" class="card-img-top" alt="FearOfDark">
                 <div class="card-body">
-                    <p class="card-text lora">Fear Of The Dark</p>
+                    <p class="card-text lora_black">Fear Of The Dark</p>
                 </div>
             </div>
             <div class="card card_aux" style="width: 18rem;">
                 <img src="imagenes/TheTrooper.jpg" class="card-img-top" alt="The Trooper">
                 <div class="card-body">
-                    <p class="card-text lora">The Trooper</p>
+                    <p class="card-text lora_black">The Trooper</p>
                 </div>
             </div>
             <div class="col-1"></div>
@@ -159,19 +199,19 @@
             <div class="card card_aux" style="width: 18rem;">
                 <img src="imagenes/Paranoid.jpg" class="card-img-top" alt="Paranoid">
                 <div class="card-body">
-                    <p class="card-text lora">Paranoid</p>
+                    <p class="card-text lora_black">Paranoid</p>
                 </div>
             </div>
             <div class="card card_aux" style="width: 18rem;">
                 <img src="imagenes/NIB.jpg" class="card-img-top" alt="NIB">
                 <div class="card-body">
-                    <p class="card-text lora">N.I.B</p>
+                    <p class="card-text lora_black">N.I.B</p>
                 </div>
             </div>
             <div class="card card_aux" style="width: 18rem;">
                 <img src="imagenes/childrenOfTheGrave.jpg" class="card-img-top" alt="ChildrenOfTheGrave">
                 <div class="card-body">
-                    <p class="card-text lora">Children Of The Grave</p>
+                    <p class="card-text lora_black">Children Of The Grave</p>
                 </div>
             </div>
             <div class="col-1"></div>
