--- a/subgeneros/thrash.html
+++ b/subgeneros/thrash.html
@@ -27,7 +27,7 @@
                     <div class="col-8">
                 <ul class="navbar-nav me-auto mb-5 me-0 mb-lg-0">
                     <li class="nav-item">
-                    <a class="nav-link active me-5" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active me-5" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -60,10 +60,107 @@
     </header>
     <main>
         <div id="container">
-            <h1 class="metal-mania-regular">Thrash Metal</h1>
+            <h1 class="metal-mania-regular nombre_subgenero">Thrash Metal</h1>
             <h5 class="lora descripcion">Thrash metal es un subgénero del heavy metal que surgió a principios de los años 80, principalmente en Estados Unidos. Se caracteriza por riffs de guitarra rápidos y agresivos, baterías veloces con uso frecuente del doble bombo, voces ásperas y letras que suelen abordar temas sociales, políticos y de rebelión.
 
-                Bandas pioneras como Metallica, Slayer, Megadeth y Anthrax —conocidas como el Big Four— popularizaron el estilo, combinando la potencia del heavy metal tradicional con la velocidad y la actitud del punk hardcore. El thrash metal tuvo gran influencia en otros subgéneros como el death metal y el groove metal.</h5>
+                Bandas pioneras como Metallica, Slayer, Megadeth y Anthrax, conocidas como el Big Four, popularizaron el estilo, combinando la potencia del heavy metal tradicional con la velocidad y la actitud del punk hardcore. El thrash metal tuvo gran influencia en otros subgéneros como el death metal y el groove metal.</h5>
+        </div>
+        <div class="container_linea_piola">
+            <h1 class="titulo metal-mania-regular">Bandas:</h1>
+            <div class="linea_piola"></div>
+        
+
+        <div id="carouselExampleAutoplaying" class="carrusel carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="imagenes/slayer.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <div class="carrusel_texto carousel-caption">
+                        <h1 class="metal-mania-regular titulo_carrusel">Slayer</h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/metallica.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <div class="carrusel_texto carousel-caption">
+                        <h1 class="metal-mania-regular titulo_carrusel">Metallica</h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/megadeth.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <div class="carrusel_texto carousel-caption">
+                        <h1 class="metal-mania-regular titulo_carrusel">Megadeth</h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/Anthrax.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <div class="carrusel_texto carousel-caption">
+                            <h1 class="metal-mania-regular titulo_carrusel">Anthrax</h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/sepultura.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <div class="carrusel_texto carousel-caption">
+                            <h1 class="metal-mania-regular titulo_carrusel">Sepultura</h1>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        </div>
+
+        <div class="container_linea_piola">
+            <h1 class="titulo metal-mania-regular">Discos:</h1>
+            <div class="linea_piola"></div>
+        
+
+        <div id="carouselExampleAutoplaying2" class="carrusel_discos carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="imagenes/reignInBlood.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <div class="carrusel_texto carousel-caption">
+                        <h1 class="metal-mania-regular titulo_carrusel">Reign in Blood</h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/MasterOfPuppets.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <div class="carrusel_texto carousel-caption">
+                        <h1 class="metal-mania-regular titulo_carrusel">Master of Puppets</h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/RustInPeace.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <div class="carrusel_texto carousel-caption">
+                        <h1 class="metal-mania-regular titulo_carrusel">Rust in Peace</h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/AmongTheLiving.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <div class="carrusel_texto carousel-caption">
+                            <h1 class="metal-mania-regular titulo_carrusel">Among the Living</h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/Roots.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <div class="carrusel_texto carousel-caption">
+                            <h1 class="metal-mania-regular titulo_carrusel">Roots</h1>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying2" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying2" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
         </div>
     </main>
     <footer>
