avances pag subgenero

--- a/subgeneros/thrash.html
+++ b/subgeneros/thrash.html
@@ -59,12 +59,25 @@
         
     </header>
     <main>
-        <div id="container">
-            <h1 class="metal-mania-regular nombre_subgenero">Thrash Metal</h1>
-            <h5 class="lora descripcion">Thrash metal es un subgénero del heavy metal que surgió a principios de los años 80, principalmente en Estados Unidos. Se caracteriza por riffs de guitarra rápidos y agresivos, baterías veloces con uso frecuente del doble bombo, voces ásperas y letras que suelen abordar temas sociales, políticos y de rebelión.
 
-                Bandas pioneras como Metallica, Slayer, Megadeth y Anthrax, conocidas como el Big Four, popularizaron el estilo, combinando la potencia del heavy metal tradicional con la velocidad y la actitud del punk hardcore. El thrash metal tuvo gran influencia en otros subgéneros como el death metal y el groove metal.</h5>
-        </div>
+            <div id="container">
+                <h1 class="metal-mania-regular nombre_subgenero">Thrash Metal</h1>
+                <h5 class="lora descripcion">Thrash metal es un subgénero del heavy metal que surgió a principios de los años 80, principalmente en Estados Unidos. Se caracteriza por riffs de guitarra rápidos y agresivos, baterías veloces con uso frecuente del doble bombo, voces ásperas y letras que suelen abordar temas sociales, políticos y de rebelión.
+
+                    Bandas pioneras como Metallica, Slayer, Megadeth y Anthrax, conocidas como el Big Four, popularizaron el estilo, combinando la potencia del heavy metal tradicional con la velocidad y la actitud del punk hardcore. El thrash metal tuvo gran influencia en otros subgéneros como el death metal y el groove metal.</h5>
+                    <h2 class="metal-mania-regular nombre_subgenero">Caracteristicas principales</h2>
+                    <ul id="caracteristicancer">
+                        <li class="item lora">Riffs de guitarra rápidos, agresivos y distorsionados.</li>
+                        <li class="item lora">Batería veloz con uso frecuente de doble bombo y ritmos intensos.</li>
+                        <li class="item lora">Voces rasposas, gritadas y enérgicas.</li>
+                        <li class="item lora">Letras con temáticas sociales, políticas y de rebelión.</li>
+                        <li class="item lora">Solos de guitarra técnicos y veloces con técnicas como shredding y tapping.</li>
+                        <li class="item lora">Influencia del punk hardcore en la actitud y la energía.</li>
+                        <li class="item lora">Estética rebelde: cuero, jeans rotos, parches y headbanging.</li>
+                    </ul>
+                </div>
+            </div>
+
         <div class="container_linea_piola">
             <h1 class="titulo metal-mania-regular">Bandas:</h1>
             <div class="linea_piola"></div>
