--- a/index.html
+++ b/index.html
@@ -98,6 +98,21 @@
             <div class="container_linea_piola">
                 <h1 class="titulo metal-mania-regular">Metallica</h1>
                 <div class="linea_piola"></div>
+                <div class="desc_banda">
+                    <h4 class="lora">Metallica es una de las bandas de heavy metal más influyentes y exitosas de la historia
+                        . Formada en Los Ángeles en 1981 por el baterista Lars Ulrich y el guitarrista y vocalista James 
+                        Hetfield, la banda se convirtió en pionera del thrash metal, un subgénero caracterizado por su 
+                        velocidad, agresividad y virtuosismo técnico. Con álbumes icónicos como Master of Puppets (1986) 
+                        y The Black Album (1991), Metallica alcanzó fama mundial gracias a himnos como ‘Enter Sandman’, 
+                        ‘One’ y ‘Nothing Else Matters’. A lo largo de su carrera, la banda ha experimentado con diferentes 
+                        sonidos, manteniéndose vigente y reinventándose con cada disco. Metallica es famosa por sus potentes
+                         presentaciones en vivo y su fiel base de fans alrededor del mundo. Su legado continúa inspirando a 
+                         nuevas generaciones de músicos y amantes del metal, consolidando su lugar como leyenda indiscutible 
+                         del rock.</h4>
+                </div>
+                <div class="titulo_integrantes">
+                    <h2 class="metal-mania-regular">Integrantes</h2>
+                </div>
                 <div class="integrante">
                     <div class="integrante_img">
                         <img class="integrante_foto" src="imagenes/james-hetfield-mid-1986-v0-8euratsi2th81.jpg" alt="James Hetfield">
@@ -137,7 +152,7 @@
                         <h5 class="lora">Lars Ulrich (Gentofte, 26 de diciembre de 1963) es un músico danés, conocido principalmente por ser el baterista, compositor y cofundador de la banda estadounidense Metallica.</h5>
                     </div>
                 </div>
-                <h1 class="titulo_canciones metal-mania-regular">Canciones Populares</h1>
+                <h2 class="titulo_canciones metal-mania-regular">Canciones Populares</h2>
             </div>
 
             <div class="card_box_title w-100"></div>
@@ -169,6 +184,21 @@
             <div class="container_linea_piola">
                 <h1 class="titulo metal-mania-regular">Iron Maiden</h1>
                 <div class="linea_piola"></div>
+                <div class="desc_banda">
+                    <h4 class="lora">Iron Maiden es una de las bandas más emblemáticas e influyentes del heavy metal. 
+                        Formada en Londres en 1975 por el bajista y principal compositor Steve Harris, la banda se destacó 
+                        rápidamente por su estilo potente, marcado por guitarras gemelas, letras épicas y la inconfundible 
+                        voz de Bruce Dickinson. Con álbumes legendarios como The Number of the Beast (1982), 
+                        Powerslave (1984) y Seventh Son of a Seventh Son (1988), Iron Maiden consolidó un sonido único 
+                        que combina el metal clásico con temáticas históricas, literarias y de fantasía. Famosos por 
+                        sus espectaculares conciertos y su icónica mascota Eddie, Iron Maiden ha conquistado escenarios 
+                        de todo el mundo y ha mantenido una base de fans leal durante décadas. La banda sigue activa, 
+                        lanzando nuevos discos y giras multitudinarias, demostrando que su legado y su pasión por el metal 
+                        permanecen tan fuertes como siempre.</h4>
+                </div>
+                <div class="titulo_integrantes">
+                    <h2 class="metal-mania-regular">Integrantes</h2>
+                </div>
                 <div class="integrante">
                     <div class="integrante_img">
                         <img class="integrante_foto" src="imagenes/bruceDickinsonMaiden.jpeg" alt="Bruce Dickinson">
@@ -218,7 +248,7 @@
                         <h5 class="lora">David Michael Murray (Edmonton, Londres, 23 de diciembre de 1956) es un músico y compositor conocido por formar parte de la banda británica de heavy metal Iron Maiden, siendo él y Steve Harris los únicos miembros de la agrupación que han aparecido en toda la discografía de la misma.</h5>
                     </div>
                 </div>
-                <h1 class="titulo_canciones metal-mania-regular">Canciones Populares</h1>
+                <h2 class="titulo_canciones metal-mania-regular">Canciones Populares</h2>
 
             </div>
             
@@ -251,6 +281,21 @@
             <div class="container_linea_piola">
                 <h1 class="titulo metal-mania-regular">Black Sabbath</h1>
                 <div class="linea_piola"></div>
+                <div class="desc_banda">
+                    <h4 class="lora">Black Sabbath es considerada la banda pionera del heavy metal y una de las más 
+                        influyentes de la historia del rock. Formada en Birmingham, Inglaterra, en 1968 por Tony Iommi 
+                        (guitarra), Ozzy Osbourne (voz), Geezer Butler (bajo) y Bill Ward (batería), la banda dio forma a 
+                        un sonido oscuro y pesado que sentó las bases del metal. Con riffs potentes, letras sombrías y una 
+                        atmósfera única, álbumes como Paranoid (1970), Master of Reality (1971) y Black Sabbath (1970) se 
+                        convirtieron en clásicos atemporales. Canciones como ‘Iron Man’, ‘War Pigs’ y ‘Paranoid’ siguen 
+                        siendo himnos del género. A lo largo de las décadas, Black Sabbath influyó en innumerables bandas 
+                        y estilos dentro del metal y el rock pesado. Tras múltiples reuniones y giras de despedida, su 
+                        legado continúa vivo, celebrando su lugar como padres fundadores de un género que transformó para 
+                        siempre la música.</h4>
+                </div>
+                <div class="titulo_integrantes">
+                    <h2 class="metal-mania-regular">Integrantes</h2>
+                </div>
                 <div class="integrante">
                     <div class="integrante_img">
                         <img class="integrante_foto" src="imagenes/Ozzy1970.jpg" alt="Ozzy Osbourne">
@@ -290,7 +335,7 @@
                         <h5 class="lora">William Thomas Ward (Aston, Birmingham, 5 de mayo de 1948), más conocido como Bill Ward, es un músico británico, reconocido por haber sido el baterista y uno de los miembros originales de la banda de heavy metal Black Sabbath. Es uno de los miembros fundadores de la banda en 1968 y cantó en dos canciones de Black Sabbath: "It's Alright" (del disco Technical Ecstasy) y "Swinging the Chain" (del disco Never Say Die!).</h5>
                     </div>
                 </div>
-                <h1 class="titulo_canciones metal-mania-regular">Canciones Populares</h1>
+                <h2 class="titulo_canciones metal-mania-regular">Canciones Populares</h2>
             </div>
             
             <div class="card_box_title w-100"></div>
