paginas subgeneros terminadas

--- a/subgeneros/heavy.html
+++ b/subgeneros/heavy.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Thrash Metal</title>
+    <title>Heavy Metal</title>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
@@ -58,19 +58,17 @@
     <main>
 
             <div id="container">
-                <h1 class="metal-mania-regular nombre_subgenero">Thrash Metal</h1>
-                <h5 class="lora descripcion">Thrash metal es un subgénero del heavy metal que surgió a principios de los años 80, principalmente en Estados Unidos. Se caracteriza por riffs de guitarra rápidos y agresivos, baterías veloces con uso frecuente del doble bombo, voces ásperas y letras que suelen abordar temas sociales, políticos y de rebelión.
-
-                    Bandas pioneras como Metallica, Slayer, Megadeth y Anthrax, conocidas como el Big Four, popularizaron el estilo, combinando la potencia del heavy metal tradicional con la velocidad y la actitud del punk hardcore. El thrash metal tuvo gran influencia en otros subgéneros como el death metal y el groove metal.</h5>
+                <h1 class="metal-mania-regular nombre_subgenero">Heavy Metal</h1>
+                <h5 class="lora descripcion">El heavy metal clásico surgió a fines de los años 60 y principios de los 70, con bandas pioneras como Black Sabbath, Led Zeppelin y Deep Purple. Se caracteriza por guitarras distorsionadas, riffs potentes, baterías contundentes y voces generalmente agudas y dramáticas. En los años 80, bandas como Judas Priest, Iron Maiden y Dio consolidaron el estilo con una estética más épica y teatral. El heavy metal clásico sentó las bases para el desarrollo de muchos subgéneros posteriores, manteniéndose como una forma pura y tradicional del metal.</h5>
                     <h2 class="metal-mania-regular nombre_subgenero">Caracteristicas principales</h2>
                     <ul id="caracteristicancer">
-                        <li class="item lora">Riffs de guitarra rápidos, agresivos y distorsionados.</li>
-                        <li class="item lora">Batería veloz con uso frecuente de doble bombo y ritmos intensos.</li>
-                        <li class="item lora">Voces rasposas, gritadas y enérgicas.</li>
-                        <li class="item lora">Letras con temáticas sociales, políticas y de rebelión.</li>
-                        <li class="item lora">Solos de guitarra técnicos y veloces con técnicas como shredding y tapping.</li>
-                        <li class="item lora">Influencia del punk hardcore en la actitud y la energía.</li>
-                        <li class="item lora">Estética rebelde: cuero, jeans rotos, parches y headbanging.</li>
+                        <li class="item lora">Riffs de guitarra pesados, melódicos y con influencia del blues.</li>
+                        <li class="item lora">Batería potente con ritmos marcados y uso moderado del doble bombo.</li>
+                        <li class="item lora">Voces limpias, agudas y teatrales, a menudo con vibrato.</li>
+                        <li class="item lora">Letras con temáticas épicas, mitológicas, fantásticas o existenciales.</li>
+                        <li class="item lora">Solos de guitarra melódicos y estructurados, con técnica pero enfoque emocional.</li>
+                        <li class="item lora">Influencia del rock clásico y psicodélico de los años 60 y 70.</li>
+                        <li class="item lora">Estética elaborada: cuero, tachuelas, chaquetas, pelo largo y simbolismo místico.</li>
                     </ul>
                 </div>
             </div>
@@ -83,33 +81,33 @@
         <div id="carouselExampleAutoplaying" class="carrusel carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="imagenes/slayer.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/ironMaiden.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Slayer</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Iron Maiden</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/metallica.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/blackSabbath.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Metallica</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Black Sabbath</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/megadeth.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/motorhead.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Megadeth</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Motörhead</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/Anthrax.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/judasPriest.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                            <h1 class="metal-mania-regular titulo_carrusel">Anthrax</h1>
+                            <h1 class="metal-mania-regular titulo_carrusel">Judas Priest</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/sepultura.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/dio.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                            <h1 class="metal-mania-regular titulo_carrusel">Sepultura</h1>
+                            <h1 class="metal-mania-regular titulo_carrusel">Dio</h1>
                     </div>
                 </div>
             </div>
@@ -132,33 +130,33 @@
         <div id="carouselExampleAutoplaying2" class="carrusel_discos carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="imagenes/reignInBlood.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/numberOfTheBeast.jpg" class="d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Reign in Blood</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">The Number of The Beast</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/MasterOfPuppets.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/Paranoid.jfif" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Master of Puppets</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Paranoid</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/RustInPeace.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/aceOfSpades.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Rust in Peace</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">The Ace of Spades</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/AmongTheLiving.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/painkiller.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                            <h1 class="metal-mania-regular titulo_carrusel">Among the Living</h1>
+                            <h1 class="metal-mania-regular titulo_carrusel">Painkiller</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/Roots.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/holyDiver.jfif" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                            <h1 class="metal-mania-regular titulo_carrusel">Roots</h1>
+                            <h1 class="metal-mania-regular titulo_carrusel">Holy Diver</h1>
                     </div>
                 </div>
             </div>
