--- a/subgeneros/black.html
+++ b/subgeneros/black.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Thrash Metal</title>
+    <title>Black Metal</title>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
@@ -58,19 +58,17 @@
     <main>
 
             <div id="container">
-                <h1 class="metal-mania-regular nombre_subgenero">Thrash Metal</h1>
-                <h5 class="lora descripcion">Thrash metal es un subgénero del heavy metal que surgió a principios de los años 80, principalmente en Estados Unidos. Se caracteriza por riffs de guitarra rápidos y agresivos, baterías veloces con uso frecuente del doble bombo, voces ásperas y letras que suelen abordar temas sociales, políticos y de rebelión.
-
-                    Bandas pioneras como Metallica, Slayer, Megadeth y Anthrax, conocidas como el Big Four, popularizaron el estilo, combinando la potencia del heavy metal tradicional con la velocidad y la actitud del punk hardcore. El thrash metal tuvo gran influencia en otros subgéneros como el death metal y el groove metal.</h5>
+                <h1 class="metal-mania-regular nombre_subgenero">Black Metal</h1>
+                <h5 class="lora descripcion">El black metal surgió en los años 80 como una forma extrema del metal, caracterizado por un sonido crudo, voces agudas y rasgadas, baterías rápidas (blast beats) y guitarras con alta distorsión. La segunda ola, a principios de los 90 (principalmente en Noruega), consolidó su estética: producción lo-fi, ideología anticristiana o pagana, y una imagen oscura con corpse paint y vestimenta negra. Bandas como Venom, Bathory, Mayhem y Burzum fueron claves en su evolución. Más que técnica, el black metal prioriza la atmósfera, la expresión emocional intensa y una postura provocadora y contracultural.</h5>
                     <h2 class="metal-mania-regular nombre_subgenero">Caracteristicas principales</h2>
                     <ul id="caracteristicancer">
-                        <li class="item lora">Riffs de guitarra rápidos, agresivos y distorsionados.</li>
-                        <li class="item lora">Batería veloz con uso frecuente de doble bombo y ritmos intensos.</li>
-                        <li class="item lora">Voces rasposas, gritadas y enérgicas.</li>
-                        <li class="item lora">Letras con temáticas sociales, políticas y de rebelión.</li>
-                        <li class="item lora">Solos de guitarra técnicos y veloces con técnicas como shredding y tapping.</li>
-                        <li class="item lora">Influencia del punk hardcore en la actitud y la energía.</li>
-                        <li class="item lora">Estética rebelde: cuero, jeans rotos, parches y headbanging.</li>
+                        <li class="item lora">Guitarras altamente distorsionadas con riffs repetitivos y atmósfera sombría.</li>
+                        <li class="item lora">Batería con uso intensivo de blast beats y ritmos frenéticos.</li>
+                        <li class="item lora">Voces agudas, rasgadas y chilladas, con estilo desgarrador.</li>
+                        <li class="item lora">Letras centradas en temas como el satanismo, paganismo, naturaleza, nihilismo o misantropía.</li>
+                        <li class="item lora">Producción lo-fi o intencionalmente sucia para mantener una sensación cruda y auténtica.</li>
+                        <li class="item lora">Estética oscura: corpse paint, ropa negra, pinchos y símbolos ocultistas.</li>
+                        <li class="item lora">Actitud radical, anticristiana y profundamente contracultural.</li>
                     </ul>
                 </div>
             </div>
@@ -83,33 +81,33 @@
         <div id="carouselExampleAutoplaying" class="carrusel carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="imagenes/slayer.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/mayem.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Slayer</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Mayhem</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/metallica.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/darkthrone.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Metallica</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Darkthrone</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/megadeth.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/burzum.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Megadeth</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Burzum</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/Anthrax.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/bathory.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                            <h1 class="metal-mania-regular titulo_carrusel">Anthrax</h1>
+                            <h1 class="metal-mania-regular titulo_carrusel">Bathory</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/sepultura.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/emperor.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                            <h1 class="metal-mania-regular titulo_carrusel">Sepultura</h1>
+                            <h1 class="metal-mania-regular titulo_carrusel">Emperor</h1>
                     </div>
                 </div>
             </div>
@@ -132,33 +130,33 @@
         <div id="carouselExampleAutoplaying2" class="carrusel_discos carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="imagenes/reignInBlood.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/deMysteriisDomSathanas.jfif" class="d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Reign in Blood</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">De Mysteriis Dom Sathanas</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/MasterOfPuppets.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/transilvanianHunger.jfif" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Master of Puppets</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Transilvanian Hunger</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/RustInPeace.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/filosofem.webp" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Rust in Peace</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Filosofem</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/AmongTheLiving.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/bloodFireDeath.jfif" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                            <h1 class="metal-mania-regular titulo_carrusel">Among the Living</h1>
+                            <h1 class="metal-mania-regular titulo_carrusel">Blood Fire Death</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/Roots.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/inTheNightsideEclipse.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                            <h1 class="metal-mania-regular titulo_carrusel">Roots</h1>
+                            <h1 class="metal-mania-regular titulo_carrusel">In The Nightside Eclipse</h1>
                     </div>
                 </div>
             </div>
