--- a/subgeneros/death.html
+++ b/subgeneros/death.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Thrash Metal</title>
+    <title>Black Metal</title>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
@@ -58,19 +58,17 @@
     <main>
 
             <div id="container">
-                <h1 class="metal-mania-regular nombre_subgenero">Thrash Metal</h1>
-                <h5 class="lora descripcion">Thrash metal es un subgénero del heavy metal que surgió a principios de los años 80, principalmente en Estados Unidos. Se caracteriza por riffs de guitarra rápidos y agresivos, baterías veloces con uso frecuente del doble bombo, voces ásperas y letras que suelen abordar temas sociales, políticos y de rebelión.
-
-                    Bandas pioneras como Metallica, Slayer, Megadeth y Anthrax, conocidas como el Big Four, popularizaron el estilo, combinando la potencia del heavy metal tradicional con la velocidad y la actitud del punk hardcore. El thrash metal tuvo gran influencia en otros subgéneros como el death metal y el groove metal.</h5>
+                <h1 class="metal-mania-regular nombre_subgenero">Black Metal</h1>
+                <h5 class="lora descripcion">El death metal nació a mediados de los años 80, principalmente en EE.UU., como una evolución más extrema del thrash metal. Se caracteriza por riffs rápidos y pesados, baterías con blast beats, voces guturales y letras enfocadas en la muerte, el gore, lo oculto o lo antirreligioso. Bandas como Death, Morbid Angel y Cannibal Corpse sentaron las bases del género, cada una aportando un enfoque distinto: técnico, brutal o atmosférico. Su sonido influenció decenas de subgéneros, pero el estilo clásico sigue siendo reconocido por su potencia, oscuridad y técnica.</h5>
                     <h2 class="metal-mania-regular nombre_subgenero">Caracteristicas principales</h2>
                     <ul id="caracteristicancer">
-                        <li class="item lora">Riffs de guitarra rápidos, agresivos y distorsionados.</li>
-                        <li class="item lora">Batería veloz con uso frecuente de doble bombo y ritmos intensos.</li>
-                        <li class="item lora">Voces rasposas, gritadas y enérgicas.</li>
-                        <li class="item lora">Letras con temáticas sociales, políticas y de rebelión.</li>
-                        <li class="item lora">Solos de guitarra técnicos y veloces con técnicas como shredding y tapping.</li>
-                        <li class="item lora">Influencia del punk hardcore en la actitud y la energía.</li>
-                        <li class="item lora">Estética rebelde: cuero, jeans rotos, parches y headbanging.</li>
+                        <li class="item lora">Guitarras afinadas en tonos bajos con riffs pesados, técnicos y agresivos.</li>
+                        <li class="item lora">Batería con blast beats, redobles rápidos y cambios de ritmo frecuentes.</li>
+                        <li class="item lora">Voces guturales profundas, a veces combinadas con growls y gritos.</li>
+                        <li class="item lora">Letras centradas en la muerte, violencia, religión, horror y temas filosóficos oscuros.</li>
+                        <li class="item lora">Solos de guitarra técnicos con escalas rápidas y disonancias.</li>
+                        <li class="item lora">Producción densa y agresiva, a menudo con un enfoque en el impacto sonoro.</li>
+                        <li class="item lora">Estética oscura: arte gráfico gore, logos ilegibles y actitud anticomercial.</li>
                     </ul>
                 </div>
             </div>
@@ -83,33 +81,33 @@
         <div id="carouselExampleAutoplaying" class="carrusel carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="imagenes/slayer.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/death.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Slayer</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Death</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/metallica.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/cannibalCorpse.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Metallica</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Cannibal Corpse</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/megadeth.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/morbidAngel.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Megadeth</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Morbid Angel</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/Anthrax.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/obituary.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                            <h1 class="metal-mania-regular titulo_carrusel">Anthrax</h1>
+                            <h1 class="metal-mania-regular titulo_carrusel">obituary</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/sepultura.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/deicide.avif" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                            <h1 class="metal-mania-regular titulo_carrusel">Sepultura</h1>
+                            <h1 class="metal-mania-regular titulo_carrusel">Deicide</h1>
                     </div>
                 </div>
             </div>
@@ -132,33 +130,33 @@
         <div id="carouselExampleAutoplaying2" class="carrusel_discos carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="imagenes/reignInBlood.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/leprosy.jfif" class="d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Reign in Blood</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Leprosy</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/MasterOfPuppets.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/torture.jpg" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Master of Puppets</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Torture</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/RustInPeace.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/altarsOfMadness.jfif" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                        <h1 class="metal-mania-regular titulo_carrusel">Rust in Peace</h1>
+                        <h1 class="metal-mania-regular titulo_carrusel">Altars of Madness</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/AmongTheLiving.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/causeOfDeath.png" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                            <h1 class="metal-mania-regular titulo_carrusel">Among the Living</h1>
+                            <h1 class="metal-mania-regular titulo_carrusel">Cause of Death</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/Roots.jpg" class="carrusel_img d-block w-100" alt="...">
+                    <img src="imagenes/legion.jfif" class="carrusel_img d-block w-100" alt="...">
                     <div class="carrusel_texto carousel-caption">
-                            <h1 class="metal-mania-regular titulo_carrusel">Roots</h1>
+                            <h1 class="metal-mania-regular titulo_carrusel">Legion</h1>
                     </div>
                 </div>
             </div>
