correccion de errores

--- a/subgeneros/death.html
+++ b/subgeneros/death.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Black Metal</title>
+    <title>Death Metal</title>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
@@ -58,7 +58,7 @@
     <main>
 
             <div id="container">
-                <h1 class="metal-mania-regular nombre_subgenero">Black Metal</h1>
+                <h1 class="metal-mania-regular nombre_subgenero">Death Metal</h1>
                 <h5 class="lora descripcion">El death metal nació a mediados de los años 80, principalmente en EE.UU., como una evolución más extrema del thrash metal. Se caracteriza por riffs rápidos y pesados, baterías con blast beats, voces guturales y letras enfocadas en la muerte, el gore, lo oculto o lo antirreligioso. Bandas como Death, Morbid Angel y Cannibal Corpse sentaron las bases del género, cada una aportando un enfoque distinto: técnico, brutal o atmosférico. Su sonido influenció decenas de subgéneros, pero el estilo clásico sigue siendo reconocido por su potencia, oscuridad y técnica.</h5>
                     <h2 class="metal-mania-regular nombre_subgenero">Caracteristicas principales</h2>
                     <ul id="caracteristicancer">
