--- a/form.html
+++ b/form.html
@@ -68,7 +68,7 @@
                         <!-- Puntuación -->
                         <div class="mb-3">
                             <label for="rating" class="form-label lora">¿Qué puntuación le darías a la página? (1 a 10)</label>
-                            <input type="number" min="1" max="10" class="form-control lora" id="rating" name="rating" required>
+                            <input type="number" min="1" max="10" class="form-control lora_black" id="rating" name="rating" required>
                         </div>
 
                         <!-- Te gustó -->
@@ -76,13 +76,13 @@
                             <label class="form-label lora">¿Te gustó la página?</label>
                             <div class="form-check">
                             <input class="form-check-input" type="radio" name="liked" id="likedYes" value="Sí" required>
-                            <label class="form-check-label lora" for="likedYes">
+                            <label class="form-check-label lora_black" for="likedYes">
                                 Sí
                             </label>
                             </div>
                             <div class="form-check">
                             <input class="form-check-input" type="radio" name="liked" id="likedNo" value="No" required>
-                            <label class="form-check-label lora" for="likedNo">
+                            <label class="form-check-label lora_black" for="likedNo">
                                 No
                             </label>
                             </div>
@@ -91,19 +91,19 @@
                         <!-- Mejoras -->
                         <div class="mb-3">
                             <label for="improvements" class="form-label lora">¿En qué podríamos mejorar?</label>
-                            <textarea class="form-control lora" id="improvements" name="improvements" rows="3"></textarea>
+                            <textarea class="form-control lora_black" id="improvements" name="improvements" rows="3"></textarea>
                         </div>
 
                         <!-- Errores -->
                         <div class="mb-3">
                             <label for="errors" class="form-label lora">¿Encontraste algún error?</label>
-                            <textarea class="form-control lora" id="errors" name="errors" rows="2"></textarea>
+                            <textarea class="form-control lora_black" id="errors" name="errors" rows="2"></textarea>
                         </div>
 
                         <!-- Sugerencias -->
                         <div class="mb-3">
                             <label for="suggestions" class="form-label lora">¿Qué subgénero, banda u otra cosa te gustaría que agreguemos?</label>
-                            <textarea class="form-control lora" id="suggestions" name="suggestions" rows="2"></textarea>
+                            <textarea class="form-control lora_black" id="suggestions" name="suggestions" rows="2"></textarea>
                         </div>
 
                         <button type="submit" class="btn btn-primary lora">Enviar</button>
